[gd_scene load_steps=4 format=3 uid="uid://pmogs2p4flmd"]

[ext_resource type="Script" uid="uid://54sw2qrcmnnv" path="res://main_menu.gd" id="1_bqqt6"]
[ext_resource type="FontFile" uid="uid://b1kfprq32h1w4" path="res://assets/brackeys_platformer_assets/fonts/PixelOperator8.ttf" id="2_wu84c"]
[ext_resource type="PackedScene" uid="uid://cewppiy5ctkeo" path="res://scenes/options_menu/options_menu.tscn" id="3_8ln24"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bqqt6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.043
anchor_top = 0.949
anchor_right = 0.043
anchor_bottom = 0.949
offset_left = -20.536
offset_top = -90.952
offset_right = 113.464
offset_bottom = 35.048
grow_vertical = 0

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_wu84c")
text = "START"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_wu84c")
text = "OPTIONS"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_wu84c")
text = "QUIT"

[node name="options_menu" parent="." instance=ExtResource("3_8ln24")]
visible = false
layout_mode = 1

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
